--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
         "lightningcss-linux-x64-gnu": "^1.29.1"
     },
     "devDependencies": {
-        "daisyui": "^5.0.0-beta.9"
+        "daisyui": "^5.0.0"
     }
 }
